--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,4 +1,10 @@
 version: 0.2
+env:
+  variables:
+    application: "kong"
+    version: "1.3.0"
+    account: "735655096069"
+    region: "ap-southeast-2"
 phases:
   install:
     commands:
@@ -11,10 +17,10 @@ phases:
     commands:
       - echo build Docker image on `date`
       - cd src
-      - docker build -t sample-express-app:latest .
-      - docker tag sample-express-app:latest 735655096069.dkr.ecr.ap-southeast-2.amazonaws.com/sample-express-app:latest
+      - docker build -t ${application}:${version} .
+      - docker tag ${application}:${version} ${account}.dkr.ecr.${region}.amazonaws.com/${application}:latest
   post_build:
     commands:
       - echo build Docker image complete `date`
-      - echo push latest Docker images to ECR...
-      - docker push 735655096069.dkr.ecr.ap-southeast-2.amazonaws.com/sample-express-app:latest
+      - echo push ${version} Docker images to ECR...
+      - docker push ${account}.dkr.ecr.${region}.amazonaws.com/${application}:${version}
