--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,15 +1,33 @@
-FROM node:8
-WORKDIR /src/app
+FROM centos:7
+LABEL maintainer="Kong Core Team <team-core@konghq.com>"
 
-# Install app dependencies
-COPY package*.json ./
-RUN npm install
+ENV KONG_VERSION 1.3.0
 
-# Copy app contents
-COPY . .
+ARG SU_EXEC_VERSION=0.2
+ARG SU_EXEC_URL="https://github.com/ncopa/su-exec/archive/v${SU_EXEC_VERSION}.tar.gz"
 
-# App runs on port 8080
-EXPOSE 8080
+RUN yum install -y -q gcc make unzip \
+	&& curl -sL "${SU_EXEC_URL}" | tar -C /tmp -zxf - \
+	&& make -C "/tmp/su-exec-${SU_EXEC_VERSION}" \
+	&& cp "/tmp/su-exec-${SU_EXEC_VERSION}/su-exec" /usr/bin \
+	&& rm -fr "/tmp/su-exec-${SU_EXEC_VERSION}" \
+	&& yum autoremove -y -q gcc make \
+	&& yum clean all -q \
+	&& rm -fr /var/cache/yum/* /tmp/yum_save*.yumtx /root/.pki
 
-# Start the app
-CMD [ "npm", "start"]
+RUN useradd --uid 1337 kong \
+	&& mkdir -p "/usr/local/kong" \
+	&& yum install -y https://bintray.com/kong/kong-rpm/download_file?file_path=centos/7/kong-$KONG_VERSION.el7.amd64.rpm \
+	&& yum clean all \
+	&& chown -R kong:0 /usr/local/kong \
+	&& chmod -R g=u /usr/local/kong
+
+COPY docker-entrypoint.sh /docker-entrypoint.sh
+
+ENTRYPOINT ["/docker-entrypoint.sh"]
+
+EXPOSE 8000 8443 8001 8444
+
+STOPSIGNAL SIGQUIT
+
+CMD ["kong", "docker-start"]
