fixed terraform ref in runme and entrypoint perms

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -23,6 +23,7 @@ RUN useradd --uid 1337 kong \
 	&& chmod -R g=u /usr/local/kong
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
